platform/docker-compose/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 9900 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                upgrade_configs:
                  - upgrade_type: websocket
                codec_type: auto
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: /tmp/access.log
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/ws/"
                          route:
                            cluster: live_ws
                            prefix_rewrite: "/"
                        - match:
                            prefix: "/"
                          route:
                            cluster: live_grpc
                            #prefix_rewrite: "/"
                            max_grpc_timeout: 0s
                      cors:
                        allow_origin_string_match:
                          safe_regex:
                            regex: ".*"
                            google_re2: {}
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        expose_headers: custom-header-1,grpc-status,grpc-message
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.cors
                  - name: envoy.router

  clusters:
    - name: live_ws
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: live_ws
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: live-cluster
                      port_value: 9090
    - name: live_grpc
      connect_timeout: 0.25s
      http2_protocol_options: {}
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: live_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: live-cluster
                      port_value: 8080
